[package]
name = "vaults"
version = "0.6.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-macros = "0.3"
once_cell = "1.5"
quick-error = "2.0.0"
strum = "0.25"
strum_macros = "0.25"
toml = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
adw = { version = "0.4", package = "libadwaita", features = ["v1_3"] }
gtk = { version = "0.6", package = "gtk4", features = ["v4_10"]}
proc-mounts = "0.3"
