[package]
name = "vaults"
version = "0.8.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-macros = "0.3"
once_cell = "1.5"
quick-error = "2.0.0"
strum = "0.26"
strum_macros = "0.26"
toml = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.7", package = "gtk4", features = ["v4_12"]}
proc-mounts = "0.3"
