[package]
name = "vaults"
version = "0.10.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-macros = "0.3"
once_cell = "1.21"
quick-error = "2.0.0"
strum = "0.27"
strum_macros = "0.27"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
proc-mounts = "0.3"
async-channel = "2"
rust-ini = "0.21"
